-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
On the new Ubuntu 2204, fio with io_uring engine failed with the following error:
io_uring err=4/file:io_u.c:1845, func=io_u error, error=interrupted system call
The test script to reproduce this failure is as follows:
DIR="/mnt/lustre" tdir="sanity-pcc.d102" dir=$DIR/$tdir file=$dir/$tfile ioengine="io_uring" numjobs=2 size=10M fio --name=seqwrite --ioengine=$ioengine \ --bs=4K --direct=1 --numjobs=$numjobs \ --iodepth=64 --size=$size --filename=$file --rw=write || error "fio seqwrite $file failed" fio --name=seqread --ioengine=$ioengine \ --bs=4K --direct=1 --numjobs=$numjobs \ --iodepth=64 --size=$size --filename=$file --rw=read || error "fio seqread $file failed"
However, this failure does not exist in the old Ubuntu 2004.
the new kernel for Ubuntu 2204 failed this test with -EINTR.
- is related to
-
LU-15399 Don't restart CLI IO for IOCB_NOWAIT direct IO
-
- Resolved
-